added README plus minor stuff

--- a/Experiment_3.ipynb
+++ b/Experiment_3.ipynb
@@ -584,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (DeepL)",
+   "display_name": "Python [conda env:DeepL]",
    "language": "python",
-   "name": "deepl"
+   "name": "conda-env-DeepL-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -598,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
