modified generate_facets_config + added exp's explanations

--- a/Experiment_4.ipynb
+++ b/Experiment_4.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==================================\n",
+    "# Experiment 4\n",
+    "# ==================================\n",
+    "\n",
+    "# estimate the number of encountered polytopes when varying the neural\n",
+    "# network architecture / capacity. Again, classifier trained on random\n",
+    "# data in R^2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -259,9 +274,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:DeepL]",
+   "display_name": "Python (DeepL)",
    "language": "python",
-   "name": "conda-env-DeepL-py"
+   "name": "deepl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -273,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
