Committing to pause for now

--- a/experiments/Experiment_2.ipynb
+++ b/experiments/Experiment_2.ipynb
@@ -22,12 +22,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jordanm/.virtualenvs/myvenv/lib/python3.7/site-packages/matplotlib/figure.py:98: MatplotlibDeprecationWarning: \n",
-      "Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
-      "  \"Adding an axes using the same arguments as a previous axes \"\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geocert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cfcbfbb84335>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# =====================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgeocert\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_boundary_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_GeoCert\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mincremental_GeoCert\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mplnn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPLNN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0m_polytope_\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPolytope\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrom_polytope_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geocert'"
      ]
     }
    ],
